k8s/UI/UI_deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: ui-weatherapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app.k8s.io/name: ui-weatherapp
  template:
    metadata:
      labels: 
        app.k8s.io/name: ui-weatherapp
    spec:
      containers:
        - name: ui-weatherapp
          image: mohamedcloud/weatherapp_ui:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http 
          livenessProbe:  
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
