k8s/UI/UI_service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: ui-weatherapp 
spec:
  selector:
    app.k8s.io/name: ui-weatherapp 
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  type: ClusterIP
