k8s/UI/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ui-ingress-weatherapp
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - weatherapp.local
      secretName: weatherapp-ui-tls-cert
  rules:
    - host: weatherapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: ui-weatherapp 
                port:
                  number: 3000
